add PatternTableColumn tests